@@ -4,6 +4,7 @@ v2.14.1 - xx xxx xxxx
      * Fixed support of strongswan 5.7+ in ovs-ipsec-monitor.
    - DPDK:
      * Fixed support of 'net_virtio' devices.
+     * Add hardware offload support tunnel pop action (experimental).
 
 v2.14.0 - 17 Aug 2020
 ---------------------
